--- a/web/sites/ptplus/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -10,9 +10,6 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_link_target
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_disable_in_tablet
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_enable_game_launch
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_code
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_provider
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_log_in_state
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_blurb
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image
@@ -25,10 +22,13 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_background_color
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_label_color
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_product_label
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_enable_game_launch
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_code
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_provider
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_use_game_loader
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_status
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_title
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_unpublish_date
-    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_use_game_loader
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_user_availability
     - image.style.thumbnail
   module:
@@ -36,8 +36,8 @@ dependencies:
     - conditional_fields
     - datetime
     - field_group
-    - image
     - link
+    - svg_image
     - text
     - webcomposer_slider_v2
 third_party_settings:
@@ -115,7 +115,7 @@ third_party_settings:
         - field_ribbon_label_color
         - field_ribbon_product_label
       parent_name: ''
-      weight: 12
+      weight: 8
       format_type: fieldset
       format_settings:
         id: product-ribbon
@@ -271,29 +271,8 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  field_enable_game_launch:
-    weight: 7
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_game_code:
-    weight: 10
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_game_launching:
     weight: 3
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
-  field_game_provider:
-    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -484,6 +463,34 @@ content:
     third_party_settings: {  }
     type: text_textfield
     region: content
+  field_slider_enable_game_launch:
+    weight: 9
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_slider_game_code:
+    weight: 11
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_slider_game_provider:
+    weight: 12
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_slider_use_game_loader:
+    weight: 10
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_status:
     weight: 20
     settings: {  }
@@ -504,13 +511,6 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
-  field_use_game_loader:
-    weight: 9
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
   field_user_availability:
     weight: 18
     settings: {  }
@@ -525,7 +525,7 @@ content:
       include_locked: true
     third_party_settings: {  }
   translation:
-    weight: 8
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
