--- a/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_provider.yml
+++ b/web/sites/ptplus/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_provider.yml
@@ -1,14 +1,14 @@
-uuid: 7714b3d5-febf-4baa-9db9-4f7d61de4730
+uuid: 6d3ced0b-81b0-4fa9-b084-74bf4cf4cafa
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.webcomposer_slider_v2_entity.field_game_provider
+    - field.storage.webcomposer_slider_v2_entity.field_slider_game_provider
   module:
     - options
     - webcomposer_slider_v2
-id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_provider
-field_name: field_game_provider
+id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_slider_game_provider
+field_name: field_slider_game_provider
 entity_type: webcomposer_slider_v2_entity
 bundle: webcomposer_slider_v2_entity
 label: 'Game Provider'
