MZEDBET-160-URL-standardization-404-page

--- a/web/sites/mobile-zedbet/config/sync/core.extension.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.extension.yml
@@ -90,6 +90,7 @@ module:
   webcomposer_registration_landing_page: 0
   webcomposer_rest_extra: 0
   webcomposer_seo: 0
+  webcomposer_site_page_not_found: 0
   webcomposer_sitemap: 0
   webcomposer_slider_v2: 0
   webcomposer_social_media: 0
