--- a/web/sites/mobile-zedbet/config/sync/core.entity_form_display.mobile_product_menu.mobile_product_menu.default.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.entity_form_display.mobile_product_menu.mobile_product_menu.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.mobile_product_menu.mobile_product_menu.field_mobile_product_menu_target
+    - field.field.mobile_product_menu.mobile_product_menu.field_product_integration_id
     - field.field.mobile_product_menu.mobile_product_menu.field_product_menu_class
     - field.field.mobile_product_menu.mobile_product_menu.field_product_menu_enable
     - field.field.mobile_product_menu.mobile_product_menu.field_product_menu_id
@@ -11,7 +12,9 @@ dependencies:
     - field.field.mobile_product_menu.mobile_product_menu.field_product_menu_title
     - field.field.mobile_product_menu.mobile_product_menu.field_product_menu_url_post_log
     - field.field.mobile_product_menu.mobile_product_menu.field_product_menu_url_pre_log
+    - field.field.mobile_product_menu.mobile_product_menu.field_require_post_login
   module:
+    - field_group
     - link
     - mobile_product_menu
 third_party_settings:
@@ -21,7 +24,7 @@ third_party_settings:
         - field_product_menu_url_pre_log
         - field_product_menu_url_post_log
       parent_name: ''
-      weight: 4
+      weight: 6
       format_type: details
       format_settings:
         id: ''
@@ -42,8 +45,14 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_product_integration_id:
+    weight: 5
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_product_menu_class:
-    weight: 6
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -51,14 +60,14 @@ content:
     type: string_textfield
     region: content
   field_product_menu_enable:
-    weight: 2
+    weight: 3
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_product_menu_id:
-    weight: 5
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -66,13 +75,13 @@ content:
     type: string_textfield
     region: content
   field_product_menu_tag:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_product_menu_title:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -95,6 +104,13 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
+  field_require_post_login:
+    weight: 4
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   name:
     type: string_textfield
     weight: 0
@@ -103,11 +119,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  translation:
-    weight: 8
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   langcode: true
+  translation: true
   user_id: true
