--- a/web/sites/mobile-zedbet/config/sync/core.entity_form_display.announcement_entity.announcement_entity.default.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.entity_form_display.announcement_entity.announcement_entity.default.yml
@@ -3,8 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.announcement_entity.announcement_entity.field_availability
     - field.field.announcement_entity.announcement_entity.field_body
     - field.field.announcement_entity.announcement_entity.field_publish_date
+    - field.field.announcement_entity.announcement_entity.field_title
     - field.field.announcement_entity.announcement_entity.field_unpublish_date
   module:
     - datetime
@@ -18,7 +20,7 @@ third_party_settings:
         - field_publish_date
         - field_unpublish_date
       parent_name: ''
-      weight: 3
+      weight: 5
       format_type: details
       format_settings:
         id: ''
@@ -33,8 +35,14 @@ targetEntityType: announcement_entity
 bundle: announcement_entity
 mode: default
 content:
+  field_availability:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_buttons
+    region: content
   field_body:
-    weight: 2
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -47,6 +55,14 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
+  field_title:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_unpublish_date:
     weight: 6
     settings: {  }
@@ -55,9 +71,10 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 1
+    weight: 2
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
