--- a/web/sites/mobile-zedbet/config/sync/core.entity_view_display.announcement_entity.announcement_entity.default.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.entity_view_display.announcement_entity.announcement_entity.default.yml
@@ -3,13 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.announcement_entity.announcement_entity.field_availability
     - field.field.announcement_entity.announcement_entity.field_body
     - field.field.announcement_entity.announcement_entity.field_publish_date
+    - field.field.announcement_entity.announcement_entity.field_title
     - field.field.announcement_entity.announcement_entity.field_unpublish_date
   module:
     - datetime
     - text
-    - user
     - webcomposer_announcements
 _core:
   default_config_hash: 3RpcEecnACMi_ZoEiLjldfDJPRK9nt72AXgw3TW3V8o
@@ -19,7 +20,7 @@ bundle: announcement_entity
 mode: default
 content:
   field_body:
-    weight: 1
+    weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -34,6 +35,14 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
+  field_title:
+    weight: 5
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_unpublish_date:
     weight: 3
     label: above
@@ -46,17 +55,19 @@ content:
   name:
     label: above
     type: string
-    weight: -4
+    weight: 0
     region: content
     settings:
       link_to_entity: false
     third_party_settings: {  }
   user_id:
-    label: hidden
-    type: author
-    weight: 0
+    label: above
+    type: entity_reference_label
+    weight: 1
     region: content
-    settings: {  }
+    settings:
+      link: true
     third_party_settings: {  }
 hidden:
+  field_availability: true
   langcode: true
