--- a/web/sites/mobile-zedbet/config/sync/webcomposer_config.login_configuration.yml
+++ b/web/sites/mobile-zedbet/config/sync/webcomposer_config.login_configuration.yml
@@ -23,4 +23,12 @@ lightbox_blurb: 'Not yet a Dafabet member?'
 _core:
   default_config_hash: LDw8PW9wswSVGgpFjaaHESQeB7QVJEtmV2mGoR4ANVY
 notification_window_title: 'Session Timeout'
-mobile_login_url: 'https://qa1-casino.elysium-dfbt.com/'
+mobile_login_url: '#'
+advanced__active_tab: edit-mobile-login
+rememberme_label: ''
+login_page_blurb: ''
+error_message_restricted_country: ''
+value: null
+format: null
+mobile_login_button_label: LOGIN/JOIN
+mobile_cant_login_url: ''
