--- a/web/sites/zedbet/config/sync/core.extension.yml
+++ b/web/sites/zedbet/config/sync/core.extension.yml
@@ -103,6 +103,7 @@ module:
   zedbet_config: 0
   zedbet_header_config: 0
   zedbet_urls: 0
+  zedbet_front_blocks: 0
   menu_link_content: 1
   pathauto: 1
   views: 10
