--- a/web/sites/zedbet/config/sync/core.extension.yml
+++ b/web/sites/zedbet/config/sync/core.extension.yml
@@ -104,6 +104,7 @@ module:
   zedbet_header_config: 0
   zedbet_urls: 0
   zedbet_front_blocks: 0
+  zedbet_unsupported_currency: 0
   menu_link_content: 1
   pathauto: 1
   views: 10
