enabled webcomposer form manager and zedbet form / updated ignore settings.

--- a/web/sites/zedbet/config/sync/config_ignore.settings.yml
+++ b/web/sites/zedbet/config/sync/config_ignore.settings.yml
@@ -1,16 +1,18 @@
 ignored_config_entities:
-  - 'webform.webform.*'
-  - 'webcomposer_config.*'
-  - 'system.menu.*'
-  - 'block.*'
-  - 'filter.*'
-  - 'language.*'
-  - 'devel.*'
-  - 'field.storage.*'
-  - 'field.field.*'
-  - 'views.view.*'
-  - 'core.base_field_override.zedbet_front_block.*'
-  - 'core.entity_form_display.zedbet_front_block.*'
-  - 'core.entity_view_display.zedbet_front_block'
+  0: 'webform.webform.*'
+  2: 'webcomposer_config.*'
+  4: 'system.menu.*'
+  6: 'block.*'
+  8: 'filter.*'
+  10: 'language.*'
+  12: 'devel.*'
+  14: 'field.storage.*'
+  16: 'field.field.*'
+  18: 'views.view.*'
+  20: 'core.base_field_override.zedbet_front_block.*'
+  22: 'core.entity_form_display.zedbet_front_block.*'
+  24: core.entity_view_display.zedbet_front_block
+  26: 'webcomposer_form_manager.*'
+  28: 'registration_config.*'
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
