--- a/web/sites/zedbet/config/sync/core.extension.yml
+++ b/web/sites/zedbet/config/sync/core.extension.yml
@@ -83,6 +83,7 @@ module:
   webcomposer_drawer: 0
   webcomposer_editor: 0
   webcomposer_floating_banners: 0
+  webcomposer_form_manager: 0
   webcomposer_games: 0
   webcomposer_language_hierarchy: 0
   webcomposer_marketing_script: 0
@@ -101,10 +102,11 @@ module:
   webform_rest: 0
   webform_ui: 0
   zedbet_config: 0
-  zedbet_header_config: 0
-  zedbet_urls: 0
+  zedbet_forms: 0
   zedbet_front_blocks: 0
+  zedbet_header_config: 0
   zedbet_unsupported_currency: 0
+  zedbet_urls: 0
   menu_link_content: 1
   pathauto: 1
   views: 10
