--- a/web/sites/zedbet/config/sync/core.extension.yml
+++ b/web/sites/zedbet/config/sync/core.extension.yml
@@ -1,6 +1,7 @@
 module:
   action: 0
   automated_cron: 0
+  basic_auth: 0
   block: 0
   block_content: 0
   breakpoint: 0
@@ -54,6 +55,8 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  registration_config: 0
+  registration_theme: 0
   rest: 0
   rest_menu_items: 0
   rest_views: 0
