--- a/web/sites/ptplus/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_link_target
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_preview_display_only
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_pt_tournament_page
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_publish_date
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_background_color
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_ribbon_label_color
@@ -191,6 +192,16 @@ content:
     region: content
   field_preview_display_only:
     weight: 16
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_pt_tournament_page:
+    weight: 31
     label: above
     settings:
       format: default
