MZEDBET-24-Mobile-Slider-Entry

--- a/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_product_slide.yml
+++ b/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_product_slide.yml
@@ -14,8 +14,10 @@ bundle: webcomposer_slider_v2_entity
 label: Product
 description: ''
 required: true
-translatable: true
-default_value: {  }
+translatable: false
+default_value:
+  -
+    value: mobile
 default_value_callback: ''
 settings: {  }
 field_type: list_string
