--- a/web/sites/mobile-zedbet/config/sync/field.storage.webcomposer_slider_v2_entity.field_product_slide.yml
+++ b/web/sites/mobile-zedbet/config/sync/field.storage.webcomposer_slider_v2_entity.field_product_slide.yml
@@ -12,6 +12,9 @@ type: list_string
 settings:
   allowed_values:
     -
+      value: mobile
+      label: Entrypage
+    -
       value: live-dealer
       label: 'Live Dealer'
   allowed_values_function: ''
