--- a/web/sites/mobile-zedbet/config/sync/core.extension.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.extension.yml
@@ -45,6 +45,7 @@ module:
   menu_ui: 0
   metatag: 0
   mobile_config: 0
+  mobile_als: 0
   mobile_live_dealer: 0
   mobile_product_menu: 0
   node: 0
@@ -71,6 +72,7 @@ module:
   user: 0
   views_ui: 0
   webcomposer_affilates: 0
+  webcomposer_als_whitelisting: 0
   webcomposer_announcements: 0
   webcomposer_audit: 0
   webcomposer_avaya: 0
