--- a/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_change_password_form.new_password.yml
+++ b/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_change_password_form.new_password.yml
@@ -66,17 +66,17 @@ field_validations:
     enable: 0
     error_message: 'Email not available'
   invalid_words:
-    enable: 0
+    enable: 1
     error_message: 'Invalid/not allowed characters'
     parameters:
-      invalid_words_list: ''
+      invalid_words_list: "password\r\nPassword"
   valid_languages:
     enable: 0
     error_message: 'This field only accepts specific characters.'
     parameters:
       regex_value: ''
   not_match_username:
-    enable: 0
+    enable: 1
     error_message: 'Password should not equal to username'
   verify_password:
     enable: 0
