--- a/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_change_password_form.submit.yml
+++ b/web/sites/zedbet/config/sync/webcomposer_form_manager.form.account_change_password_form.submit.yml
@@ -1,9 +1,8 @@
 field_settings:
-  label: 'Confirm Password'
-  placeholder: 'Confirm Password'
+  label: 'Change password'
 field_validations:
   required:
-    enable: 1
+    enable: 0
     error_message: 'Field should be required'
   alpha:
     enable: 0
@@ -47,10 +46,10 @@ field_validations:
     parameters:
       length: '10'
   regex:
-    enable: 1
+    enable: 0
     error_message: 'This field only accepts specific characters.'
     parameters:
-      regex_value: '^[-a-zA-Z0-9!@#$&()`.+,/\"]*$'
+      regex_value: ''
   valid_date:
     enable: 0
     error_message: 'Date is invalid'
@@ -69,17 +68,17 @@ field_validations:
     enable: 0
     error_message: 'Invalid/not allowed characters'
     parameters:
-      invalid_words_list: "password\r\nPassword"
+      invalid_words_list: ''
   valid_languages:
     enable: 0
     error_message: 'This field only accepts specific characters.'
     parameters:
       regex_value: ''
   not_match_username:
-    enable: 1
+    enable: 0
     error_message: 'Password should not equal to username'
   verify_password:
-    enable: 1
+    enable: 0
     error_message: 'Password not match.'
   allowed_date:
     enable: 0
