--- a/web/sites/mobile-zedbet/config/sync/core.extension.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.extension.yml
@@ -44,8 +44,8 @@ module:
   menu_link_attributes: 0
   menu_ui: 0
   metatag: 0
-  mobile_config: 0
   mobile_als: 0
+  mobile_config: 0
   mobile_live_dealer: 0
   mobile_product_menu: 0
   node: 0
@@ -75,6 +75,7 @@ module:
   webcomposer_als_whitelisting: 0
   webcomposer_announcements: 0
   webcomposer_audit: 0
+  webcomposer_audit_export: 0
   webcomposer_avaya: 0
   webcomposer_cache: 0
   webcomposer_config: 0
