--- a/web/sites/zipang-casino/config/sync/core.entity_form_display.node.basic_page_type_2.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_form_display.node.basic_page_type_2.default.yml
@@ -11,7 +11,7 @@ dependencies:
     - field.field.node.basic_page_type_2.field_image_link
     - field.field.node.basic_page_type_2.field_images_open_link
     - field.field.node.basic_page_type_2.field_meta_tag
-    - field.field.node.basic_page_type_2.field_parent_breadcrumbs
+    - field.field.node.basic_page_type_2.field_parent
     - field.field.node.basic_page_type_2.field_summary
     - image.style.thumbnail
     - node.type.basic_page_type_2
@@ -108,13 +108,14 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
-  field_parent_breadcrumbs:
+  field_parent:
     weight: 126
     settings:
       size: 60
+      match_operator: CONTAINS
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: entity_reference_autocomplete
     region: content
   field_summary:
     weight: 6
