--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.node.basic_page_type_2.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.node.basic_page_type_2.default.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.basic_page_type_2.body
+    - field.field.node.basic_page_type_2.field_breadcrumbs
     - field.field.node.basic_page_type_2.field_button_link
     - field.field.node.basic_page_type_2.field_button_open_link
     - field.field.node.basic_page_type_2.field_image
     - field.field.node.basic_page_type_2.field_image_link
     - field.field.node.basic_page_type_2.field_images_open_link
     - field.field.node.basic_page_type_2.field_meta_tag
+    - field.field.node.basic_page_type_2.field_parent
     - field.field.node.basic_page_type_2.field_summary
     - node.type.basic_page_type_2
   module:
@@ -30,6 +32,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_breadcrumbs:
+    type: string
+    weight: 7
+    region: content
+    label: above
+    settings:
+      link_to_entity: false
+      third_party_settings: { }
   field_button_link:
     weight: 4
     label: hidden
@@ -69,6 +79,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
+    region: content
+  field_parent:
+    weight: 9
+    label: above
+    settings:
+      link: true
+    third_party_settings: { }
+    type: entity_reference_label
     region: content
   field_summary:
     weight: 0
