--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.node.basic_page_type_3.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.node.basic_page_type_3.default.yml
@@ -4,7 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.basic_page_type_3.body
+    - field.field.node.basic_page_type_3.field_breadcrumbs
     - field.field.node.basic_page_type_3.field_meta_tag
+    - field.field.node.basic_page_type_3.field_parent
     - node.type.basic_page_type_3
   module:
     - metatag
@@ -29,6 +31,14 @@ content:
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
+  field_parent:
+    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: { }
+    type: entity_reference_label
+    region: content
   links:
     weight: 1
     region: content
@@ -36,3 +46,4 @@ content:
     third_party_settings: {  }
 hidden:
   langcode: true
+  field_breadcrumbs: true
