--- a/web/sites/zipang-casino/config/sync/core.entity_view_display.node.page.default.yml
+++ b/web/sites/zipang-casino/config/sync/core.entity_view_display.node.page.default.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.page.body
+    - field.field.node.page.field_breadcrumbs
     - field.field.node.page.field_button_link
     - field.field.node.page.field_button_open_link
     - field.field.node.page.field_image
     - field.field.node.page.field_image_link
     - field.field.node.page.field_images_open_link
     - field.field.node.page.field_meta_tag
+    - field.field.node.page.field_parent
     - field.field.node.page.field_summary
     - field.field.node.page.field_thumbnail_image
     - node.type.page
@@ -69,6 +71,14 @@ content:
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
+  field_parent:
+    weight: 8
+    label: above
+    settings:
+      link: true
+    third_party_settings: { }
+    type: entity_reference_label
+    region: content
   field_summary:
     weight: 0
     label: hidden
@@ -103,3 +113,4 @@ hidden:
   field_post_banner_link_target: true
   field_post_body: true
   langcode: true
+  field_breadcrumbs: true
