added sync files for right side block & front blocks

--- a/web/sites/zedbet/config/sync/core.entity_form_display.taxonomy_term.product.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_form_display.taxonomy_term.product.default.yml
@@ -4,11 +4,29 @@ status: true
 dependencies:
   config:
     - taxonomy.vocabulary.product
+  module:
+    - path
+    - text
 id: taxonomy_term.product.default
 targetEntityType: taxonomy_term
 bundle: product
 mode: default
 content:
+  description:
+    type: text_textarea
+    weight: 3
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  langcode:
+    type: language_select
+    weight: 2
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -17,7 +35,15 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden:
-  description: true
-  langcode: true
-  path: true
+  path:
+    type: path
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  translation:
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+hidden: {  }
