--- a/web/sites/zedbet/config/sync/core.entity_form_display.node.page.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_form_display.node.page.default.yml
@@ -5,61 +5,99 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_banner_content
+    - field.field.node.page.field_banner_content_position
     - field.field.node.page.field_banner_link
     - field.field.node.page.field_banner_link_target
+    - field.field.node.page.field_hide_right_side_block
     - field.field.node.page.field_image
     - field.field.node.page.field_log_in_state
-    - field.field.node.page.field_post_banner_content
-    - field.field.node.page.field_post_banner_image
-    - field.field.node.page.field_post_banner_link
-    - field.field.node.page.field_post_banner_link_target
-    - field.field.node.page.field_post_body
+    - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_product
     - image.style.thumbnail
     - node.type.page
   module:
     - conditional_fields
+    - entity_reference_views_select
     - field_group
     - image
     - link
+    - metatag
     - path
     - scheduler
     - text
 third_party_settings:
   field_group:
-    group_pre:
+    group_login_state_settings:
+      children:
+        - field_log_in_state
+      parent_name: group_fields
+      weight: 19
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Login State Settings'
+    group_page_content_settings:
       children:
         - body
+      parent_name: group_fields
+      weight: 21
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Page Content Settings'
+    group_right_side_block_settings:
+      children:
+        - field_hide_right_side_block
+      parent_name: group_fields
+      weight: 22
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Right Side Block Settings'
+    group_banner_settings:
+      children:
         - field_image
-        - field_banner_content
         - field_banner_link
         - field_banner_link_target
-      parent_name: ''
-      weight: 12
-      format_type: fieldset
+        - field_banner_content
+        - field_banner_content_position
+      parent_name: group_fields
+      weight: 20
+      format_type: tab
       format_settings:
-        label: 'PRE-Login Fields'
-        description: ''
         id: ''
         classes: ''
-        required_fields: false
-      label: 'PRE-Login Fields'
-    group_post_login_fields:
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Banner Settings'
+    group_fields:
       children:
-        - field_post_body
-        - field_post_banner_image
-        - field_post_banner_content
-        - field_post_banner_link
-        - field_post_banner_link_target
+        - group_login_state_settings
+        - group_banner_settings
+        - group_page_content_settings
+        - group_right_side_block_settings
       parent_name: ''
-      weight: 13
+      weight: 9
       format_type: fieldset
       format_settings:
-        label: 'Post-Login Fields'
-        description: ''
         id: ''
         classes: ''
-        required_fields: false
-      label: 'Post-Login Fields'
+        description: ''
+        required_fields: true
+      label: Fields
 _core:
   default_config_hash: sWCotip3wyA0CvZUxyo-StTDU8TyTAhx5fcfOiHS6s4
 id: node.page.default
@@ -68,113 +106,57 @@ bundle: page
 mode: default
 content:
   body:
-    type: text_textarea_with_summary
-    weight: 11
-    region: content
+    weight: 26
     settings:
       rows: 9
       summary_rows: 3
       placeholder: ''
-    third_party_settings:
-      conditional_fields:
-        fecbd537-abd3-4b4b-96c9-126939672f22:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
+    third_party_settings: {  }
+    type: text_textarea_with_summary
+    region: content
   created:
     type: datetime_timestamp
-    weight: 4
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_banner_content:
-    weight: 13
+    weight: 15
     settings:
       rows: 5
       placeholder: ''
     third_party_settings:
-      conditional_fields:
-        dffa8ac4-6e6e-4000-8037-00a78894464f:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
+      conditional_fields: {  }
     type: text_textarea
     region: content
+  field_banner_content_position:
+    weight: 16
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_banner_link:
-    weight: 14
+    weight: 13
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings:
-      conditional_fields:
-        b42fac04-7f86-4aeb-bbf6-c5ab15dc5679:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
+      conditional_fields: {  }
     type: link_default
     region: content
   field_banner_link_target:
-    weight: 15
+    weight: 14
     settings: {  }
     third_party_settings:
-      conditional_fields:
-        42e28bf7-3635-4f3b-8857-0c54eb861c96:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
+      conditional_fields: {  }
     type: options_select
+    region: content
+  field_hide_right_side_block:
+    weight: 25
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   field_image:
     weight: 12
@@ -182,170 +164,37 @@ content:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings:
-      conditional_fields:
-        9015b36a-c215-43e8-8517-1386783baf8c:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
+      conditional_fields: {  }
     type: image_image
     region: content
   field_log_in_state:
-    weight: 2
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
     region: content
-  field_post_banner_content:
-    weight: 16
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings:
-      conditional_fields:
-        65ca05e8-3ea3-481d-9a6a-1331231122f4:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
-    type: text_textarea
-    region: content
-  field_post_banner_image:
-    weight: 15
-    settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings:
-      conditional_fields:
-        4520892f-cf43-40a7-a6c6-87d628da1097:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
-    type: image_image
-    region: content
-  field_post_banner_link:
-    weight: 17
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings:
-      conditional_fields:
-        19721288-99d8-4bde-82fe-9eef1a43e3aa:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
-    type: link_default
-    region: content
-  field_post_banner_link_target:
-    weight: 18
+  field_meta_tags:
+    weight: 13
     settings: {  }
-    third_party_settings:
-      conditional_fields:
-        f6992017-6f05-4b85-9d1b-bf37ef46078d:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
-    type: options_select
+    third_party_settings: {  }
+    type: metatag_firehose
     region: content
-  field_post_body:
-    weight: 14
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings:
-      conditional_fields:
-        79d825f2-0847-487d-89e2-aef2171b3be8:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: page
-    type: text_textarea_with_summary
+  field_product:
+    weight: 8
+    settings: {  }
+    third_party_settings: {  }
+    type: erviews_options_select
     region: content
   langcode:
     type: language_select
     weight: 1
     region: content
-    settings: {  }
+    settings:
+      include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -353,25 +202,32 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 5
     region: content
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 9
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 11
+    weight: 7
     region: content
     settings: {  }
+    third_party_settings: {  }
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 14
+    region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
@@ -383,13 +239,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 5
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -398,7 +254,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 10
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
