--- a/web/sites/zedbet/config/sync/core.entity_view_display.node.page.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_view_display.node.page.default.yml
@@ -5,15 +5,14 @@ dependencies:
   config:
     - field.field.node.page.body
     - field.field.node.page.field_banner_content
+    - field.field.node.page.field_banner_content_position
     - field.field.node.page.field_banner_link
     - field.field.node.page.field_banner_link_target
+    - field.field.node.page.field_hide_right_side_block
     - field.field.node.page.field_image
     - field.field.node.page.field_log_in_state
-    - field.field.node.page.field_post_banner_content
-    - field.field.node.page.field_post_banner_image
-    - field.field.node.page.field_post_banner_link
-    - field.field.node.page.field_post_banner_link_target
-    - field.field.node.page.field_post_body
+    - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_product
     - node.type.page
   module:
     - image
@@ -77,50 +76,12 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_post_banner_content:
-    weight: 108
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
-  field_post_banner_image:
-    weight: 109
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
-  field_post_banner_link:
-    weight: 110
-    label: above
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
-    region: content
-  field_post_banner_link_target:
-    weight: 111
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_post_body:
-    weight: 107
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
   links:
     weight: 101
     region: content
 hidden:
+  field_banner_content_position: true
+  field_hide_right_side_block: true
+  field_meta_tags: true
+  field_product: true
   langcode: true
