--- a/web/sites/zedbet/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/web/sites/zedbet/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -29,13 +29,17 @@ content:
     region: content
 hidden:
   field_banner_content: true
+  field_banner_content_position: true
   field_banner_link: true
   field_banner_link_target: true
+  field_hide_right_side_block: true
   field_image: true
   field_log_in_state: true
+  field_meta_tags: true
   field_post_banner_content: true
   field_post_banner_image: true
   field_post_banner_link: true
   field_post_banner_link_target: true
   field_post_body: true
+  field_product: true
   langcode: true
