--- a/web/sites/zedbet/config/sync/field.field.node.page.body.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.page.body.yml
@@ -1,4 +1,4 @@
-uuid: 55869593-a503-4307-9915-a0d376c5e927
+uuid: dd5fc550-fbec-49ca-9509-ce86270b9e09
 langcode: en
 status: true
 dependencies:
@@ -7,13 +7,11 @@ dependencies:
     - node.type.page
   module:
     - text
-_core:
-  default_config_hash: rUop-8b6hvxxDYbv-KobTfNIBNbPY9qOPl8f6kBNSpw
 id: node.page.body
 field_name: body
 entity_type: node
 bundle: page
-label: Body
+label: 'Page Content'
 description: ''
 required: false
 translatable: true
