--- a/web/sites/zedbet/config/sync/views.view.entity_reference.yml
+++ b/web/sites/zedbet/config/sync/views.view.entity_reference.yml
@@ -1,4 +1,4 @@
-uuid: 10548373-0202-485e-a045-dda3b2e8e83c
+uuid: 51e0f764-7b1a-455f-982f-26dd4ad4ab8c
 langcode: en
 status: true
 dependencies:
@@ -7,8 +7,8 @@ dependencies:
   module:
     - taxonomy
     - user
-id: product
-label: Product
+id: entity_reference
+label: 'Entity Reference'
 module: views
 description: ''
 tag: ''
@@ -84,54 +84,39 @@ display:
           id: name
           table: taxonomy_term_field_data
           field: name
+          entity_type: taxonomy_term
+          entity_field: name
+          label: ''
+          alter:
+            alter_text: false
+            make_link: false
+            absolute: false
+            trim: false
+            word_boundary: false
+            ellipsis: false
+            strip_tags: false
+            html: false
+          hide_empty: false
+          empty_zero: false
+          type: string
+          settings:
+            link_to_entity: true
+          plugin_id: term_name
           relationship: none
           group_type: group
           admin_label: ''
-          label: ''
           exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: false
-            ellipsis: false
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
           element_type: ''
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
-          hide_empty: false
-          empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -143,9 +128,6 @@ display:
           separator: ', '
           field_api_classes: false
           convert_spaces: false
-          entity_type: taxonomy_term
-          entity_field: name
-          plugin_id: term_name
       filters:
         vid:
           id: vid
@@ -218,18 +200,15 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
+      pager:
+        type: none
+        options:
+          offset: 0
       style:
         type: entity_reference
         options:
           search_fields:
             name: name
-      row:
-        type: entity_reference
-        options:
-          default_field_elements: true
-          inline: {  }
-          separator: '-'
-          hide_empty: false
     cache_metadata:
       max-age: -1
       contexts:
