--- a/web/sites/zedbet/config/sync/views.view.zedbet_front_blocks_cmi.yml
+++ b/web/sites/zedbet/config/sync/views.view.zedbet_front_blocks_cmi.yml
@@ -1,19 +1,21 @@
-uuid: 10548373-0202-485e-a045-dda3b2e8e83c
+uuid: f5aed3c6-c2ea-423f-94e9-6ac5937327ba
 langcode: en
 status: true
 dependencies:
-  config:
-    - taxonomy.vocabulary.product
   module:
-    - taxonomy
-    - user
-id: product
-label: Product
+    - rest
+    - serialization
+    - webcomposer_rest_extra
+    - zedbet_front_blocks
+_core:
+  default_config_hash: C5hrVYxvZ-uTxOOW2ZEC6L0xaQJjibxO7twtcI6oqTM
+id: zedbet_front_blocks_cmi
+label: 'Zedbet Front Blocks CMI'
 module: views
 description: ''
 tag: ''
-base_table: taxonomy_term_field_data
-base_field: tid
+base_table: zedbet_front_block_field_data
+base_field: id
 core: 8.x
 display:
   default:
@@ -23,9 +25,8 @@ display:
     position: 0
     display_options:
       access:
-        type: perm
-        options:
-          perm: 'access content'
+        type: none
+        options: {  }
       cache:
         type: tag
         options: {  }
@@ -66,12 +67,7 @@ display:
             previous: ‹‹
             next: ››
       style:
-        type: default
-        options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
-          uses_fields: false
+        type: serializer
       row:
         type: fields
         options:
@@ -81,9 +77,12 @@ display:
           default_field_elements: true
       fields:
         name:
-          id: name
-          table: taxonomy_term_field_data
+          table: zedbet_front_block_field_data
           field: name
+          id: name
+          entity_type: null
+          entity_field: name
+          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
@@ -107,8 +106,8 @@ display:
             target: ''
             nl2br: false
             max_length: 0
-            word_boundary: false
-            ellipsis: false
+            word_boundary: true
+            ellipsis: true
             more_link: false
             more_link_text: ''
             more_link_path: ''
@@ -120,7 +119,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -130,8 +129,7 @@ display:
           hide_alter_empty: true
           click_sort_column: value
           type: string
-          settings:
-            link_to_entity: true
+          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -142,23 +140,10 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          convert_spaces: false
-          entity_type: taxonomy_term
-          entity_field: name
-          plugin_id: term_name
       filters:
-        vid:
-          id: vid
-          table: taxonomy_term_field_data
-          field: vid
-          value:
-            product: product
-          entity_type: taxonomy_term
-          entity_field: vid
-          plugin_id: bundle
         langcode:
           id: langcode
-          table: taxonomy_term_field_data
+          table: zedbet_front_block_field_data
           field: langcode
           relationship: none
           group_type: group
@@ -193,7 +178,7 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
-          entity_type: taxonomy_term
+          entity_type: zedbet_front_block
           entity_field: langcode
           plugin_id: language
       sorts: {  }
@@ -208,32 +193,34 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - request_format
         - url.query_args
-        - user.permissions
       tags: {  }
-  entity_reference_1:
-    display_plugin: entity_reference
-    id: entity_reference_1
-    display_title: 'Entity Reference'
+  rest_export_zedbet_front_blocks_cmi:
+    display_plugin: rest_export
+    id: rest_export_zedbet_front_blocks_cmi
+    display_title: 'REST export'
     position: 1
     display_options:
       display_extenders: {  }
+      path: api/zedbet_front_blocks
+      pager:
+        type: none
+        options:
+          offset: 0
       style:
-        type: entity_reference
+        type: node_list_serializer
         options:
-          search_fields:
-            name: name
+          uses_fields: false
+          formats:
+            json: json
       row:
-        type: entity_reference
-        options:
-          default_field_elements: true
-          inline: {  }
-          separator: '-'
-          hide_empty: false
+        type: data_entity
+        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - user.permissions
+        - request_format
       tags: {  }
